// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poll Block should render AlreadyVoted 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              numquam vitae recusandae
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia81"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 08.05.2026 09:18
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousAlreadyVoted 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              numquam vitae recusandae
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia82"
    >
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Ja
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            5%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-qepixw eluy2k85"
            class="css-12vloea eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            1 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Nein
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            24%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-1o1o9y6 eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            5 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-4fpeqm e1mpfgg53"
    >
      21 Stimmen – Abstimmung beendet.
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 e1mpfgg50"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              numquam vitae recusandae
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb e1mpfgg52"
    >
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Ja
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            5%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-qepixw eluy2k85"
            class="css-1rmhnzn eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            1 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Nein
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            24%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-1o1o9y6 eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            5 Stimmen
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 08.05.2026 09:18
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVoting 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              numquam vitae recusandae
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia81"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 08.05.2026 09:18
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,35 +31,75 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-taqjlb emdsia81"
+       class="css-taqjlb emdsia82"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-lgj0h8 eluy2k80"
+       >
+         <div
+           class="css-j3wn8j eluy2k81"
+         >
+           <div
+             class="css-10rvbm3 eluy2k82"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-10rvbm3 eluy2k83"
+           >
+             9%
+           </div>
+         </div>
+         <div
+           class="css-1o9tf6e eluy2k84"
+         >
+           <div
+             class="css-8ipu5j eluy2k85"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-6bql4y eluy2k86"
+           >
+             2 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-lgj0h8 eluy2k80"
+       >
+         <div
+           class="css-j3wn8j eluy2k81"
          >
+           <div
+             class="css-10rvbm3 eluy2k82"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-10rvbm3 eluy2k83"
+           >
+             23%
+           </div>
+         </div>
+         <div
+           class="css-1o9tf6e eluy2k84"
+         >
+           <div
+             class="css-gmq9xh eluy2k85"
            />
-       </button>
+           <div
+             class="css-fvygtq eluy2k86"
+           >
+             5 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-4fpeqm emdsia83"
      >
-       21 Stimmen – Schliesst am 08.05.2026 09:18
+       22 Stimmen – Schliesst am 08.05.2026 09:18
      </div>
    </article>
  </DocumentFragment>"
`;

exports[`Poll Block should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              numquam vitae recusandae
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia82"
    >
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Ja
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            5%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-qepixw eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            1 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Nein
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            24%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-1o1o9y6 eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            5 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 01.01.2033 00:00
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render Voting 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia81"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 01.01.2033 00:00
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingClosed 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia82"
    >
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Ja
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            52%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-1y08goj eluy2k85"
          />
          <div
            class="css-6bql4y eluy2k86"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Nein
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            48%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-p42mw0 eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Abstimmung beendet.
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,35 +31,75 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-taqjlb emdsia81"
+       class="css-taqjlb emdsia82"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-lgj0h8 eluy2k80"
+       >
+         <div
+           class="css-j3wn8j eluy2k81"
+         >
+           <div
+             class="css-10rvbm3 eluy2k82"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-10rvbm3 eluy2k83"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-1o9tf6e eluy2k84"
+         >
+           <div
+             class="css-1vkxa1t eluy2k85"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-6bql4y eluy2k86"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-lgj0h8 eluy2k80"
+       >
+         <div
+           class="css-j3wn8j eluy2k81"
          >
+           <div
+             class="css-10rvbm3 eluy2k82"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-10rvbm3 eluy2k83"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-1o9tf6e eluy2k84"
+         >
+           <div
+             class="css-1sbrlzb eluy2k85"
            />
-       </button>
+           <div
+             class="css-fvygtq eluy2k86"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-4fpeqm emdsia83"
      >
-       21 Stimmen – Schliesst am 01.01.2033 00:00
+       22 Stimmen – Schliesst am 01.01.2033 00:00
      </div>
    </article>
  </DocumentFragment>"
`;

exports[`Poll Block should render WihtoutPoll 1`] = `<DocumentFragment />`;

exports[`Poll Block should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia82"
    >
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Ja
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            52%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-1y08goj eluy2k85"
          />
          <div
            class="css-6bql4y eluy2k86"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Nein
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            48%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-p42mw0 eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 08.05.2026 09:18
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-1p44k52 emdsia80"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
    >
      Question
    </h1>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              numquam vitae recusandae
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="css-taqjlb emdsia82"
    >
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Ja
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            5%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-qepixw eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            1 Stimmen
          </div>
        </div>
      </div>
      <div
        class="css-lgj0h8 eluy2k80"
      >
        <div
          class="css-j3wn8j eluy2k81"
        >
          <div
            class="css-10rvbm3 eluy2k82"
          >
            Nein
          </div>
          <div
            class="css-10rvbm3 eluy2k83"
          >
            24%
          </div>
        </div>
        <div
          class="css-1o9tf6e eluy2k84"
        >
          <div
            class="css-1o1o9y6 eluy2k85"
          />
          <div
            class="css-fvygtq eluy2k86"
          >
            5 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-4fpeqm emdsia83"
    >
      21 Stimmen – Schliesst am 08.05.2026 09:18
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithError 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,10 +31,60 @@
            </span>
          </p>
        </div>
      </div>
      <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1hdyuqk-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the user vote.
+       </div>
+     </div>
+     <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1hdyuqk-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the poll vote.
+       </div>
+     </div>
+     <div
        class="css-taqjlb emdsia81"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1hf73u2-MuiButtonBase-root-MuiButton-root"
          tabindex="0""
`;
